Cambios realizados en HTML y back-end en JS. Filtrado por busqueda finalizado.

--- a/busqueda.html
+++ b/busqueda.html
@@ -30,7 +30,7 @@
           const searchForm = document.getElementById('search-form');
           searchForm.addEventListener('submit', function(event) {
           event.preventDefault(); // Prevenir el envío del formulario
-          createAndrunQuery(); // Llamar a la función createAndrunQuery()
+          mainQuery(); // Llamar a la función createAndrunQuery()
           });
         </script>
         
@@ -44,12 +44,12 @@
         </div>
         <div class="form-group">
           <label>Género:</label>
-          <label for="genre-action"><input type="radio" id="genre-action" name="genre" value="acción"> Acción</label>
-          <label for="genre-comedy"><input type="radio" id="genre-comedy" name="genre" value="comedia"> Comedia</label>
-          <label for="genre-terror"><input type="radio" id="genre-terror" name="genre" value="terror"> Terror</label>
-          <label for="genre-romance"><input type="radio" id="genre-romance" name="genre" value="romance"> Romance </label>
-          <label for="genre-SciFi"><input type="radio" id="genre-SciFi" name="genre" value="scifi"> Ciencia Ficción </label>
-          <label for="genre-none"><input type="radio" id="genre-none" name="genre" value="none"> No importa </label>
+          <label for="genre-action"><input type="radio" id="genre-action" name="genre" value="Acción">Acción</label>
+          <label for="genre-comedy"><input type="radio" id="genre-comedy" name="genre" value="Comedia">Comedia</label>
+          <label for="genre-terror"><input type="radio" id="genre-terror" name="genre" value="Terror">Terror</label>
+          <label for="genre-romance"><input type="radio" id="genre-romance" name="genre" value="Romance">Romance</label>
+          <label for="genre-SciFi"><input type="radio" id="genre-SciFi" name="genre" value="Ciencia Ficción">Ciencia Ficción</label>
+          <label for="genre-none"><input type="radio" id="genre-none" name="genre" value="No importa">No importa</label>
         </div>
         <div class="form-group">
           <label for="ranking">Ranking:&nbsp<span id="slider-value">5</span></label>
@@ -68,43 +68,43 @@
           <h3 id="movieTitle1">Película 1</h3>
           <p>Año de publicación:&nbsp<span id="movieYear1">año</span></p>
           <p>Ranking:&nbsp<span id="movieRank1">punteo</span></p>
-          <p id="movieGenre1">Género</p>
-          <p id="movieDirector1">Director</p>
+          <p id="movieGenre1">Género:</p>
+          <p id="movieDirector1">Director:</p>
         </div>
         <div class="movie-card" id="movieSpace2">
           <h3 id="movieTitle2">Película 2</h3>
           <p>Año de publicación:&nbsp<span id="movieYear2">año</span></p>
           <p>Ranking:&nbsp<span id="movieRank2">punteo</span></p>
-          <p id="movieGenre2">Género</p>
-          <p id="movieDirector2">Director</p>
+          <p id="movieGenre2">Género:</p>
+          <p id="movieDirector2">Director:</p>
         </div>
         <div class="movie-card" id="movieSpace3">
           <h3 id="movieTitle3">Película 3</h3>
           <p>Año de publicación:&nbsp<span id="movieYear3">año</span></p>
           <p>Ranking:&nbsp<span id="movieRank3">punteo</span></p>
-          <p id="movieGenre3">Género</p>
-          <p id="movieDirector3">Director</p>
+          <p id="movieGenre3">Género:</p>
+          <p id="movieDirector3">Director:</p>
         </div>
         <div class="movie-card" id="movieSpace4">
           <h3 id="movieTitle4">Película 4</h3>
           <p>Año de publicación:&nbsp<span id="movieYear4">año</span></p>
           <p>Ranking:&nbsp<span id="movieRank4">punteo</span></p>
-          <p id="movieGenre4">Género</p>
-          <p id="movieDirector4">Director</p>
+          <p id="movieGenre4">Género:</p>
+          <p id="movieDirector4">Director:</p>
         </div>
         <div class="movie-card" id="movieSpace5">
           <h3 id="movieTitle5">Película 5</h3>
           <p>Año de publicación:&nbsp<span id="movieYear5">año</span></p>
           <p>Ranking:&nbsp<span id="movieRank5">punteo</span></p>
-          <p id="movieGenre5">Género</p>
-          <p id="movieDirector5">Director</p>
+          <p id="movieGenre5">Género:</p>
+          <p id="movieDirector5">Director:</p>
         </div>
         <div class="movie-card" id="movieSpace6">
           <h3 id="movieTitle6">Película 6</h3>
           <p>Año de publicación:&nbsp<span id="movieYear6">año</span></p>
           <p>Ranking:&nbsp<span id="movieRank6">punteo</span></p>
-          <p id="movieGenre6">Género</p>
-          <p id="movieDirector6">Director</p>
+          <p id="movieGenre6">Género:</p>
+          <p id="movieDirector6">Director:</p>
         </div>
       </div>
   
