--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-  	<h1>INSERTAR TÍTULO :)</h1>
+  	<h1>MOVIE SAGE</h1>
     <h2>BIENVENIDO</h2>
     <button id="add" onclick="location.href='añadir.html'">Agregar película</button>
     <button id="recomend" onclick="location.href='busqueda.html'">Buscar recomendación</button>
