--- a/añadir.html
+++ b/añadir.html
@@ -7,6 +7,7 @@
     <!-- Custom styles for this template-->
     <link href="css/general_style.css" rel="stylesheet">
     <link href="css/estiloRecomendaciones.css" rel="stylesheet">
+    <link href="css/moreStyles.css" rel="stylesheet">
 
 </head>
 
@@ -32,8 +33,8 @@
         <label for="genre-SciFi"><input type="radio" id="genre-drama" name="genre" value="drama"> Ciencia Ficción </label>
       </div>
       <div class="form-group">
-        <label for="ranking">Ranking:</label>
-        <input type="range" id="ranking" name="ranking" min="1" max="10" step="1">
+        <label for="ranking">Ranking:&nbsp<span id="slider-value">5</span></label>
+        <input type="range" id="ranking" name="ranking" min="0" max="10" step="0.1">
       </div>
       <input type="submit" value="Guardar Recomendación" class="button">
     </form>
@@ -42,7 +43,19 @@
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
     </a>
-  </div>
 
+    <div class="back-button">
+      <button id="back" onclick="window.history.back()">Atrás</button>
+    </div>
+  </div>
+  <script>
+    const slider = document.getElementById('ranking');
+    const sliderValue = document.getElementById('slider-value');
+
+    // Actualizar el valor del slider cuando se cambie su posición
+    slider.addEventListener('input', () => {
+        sliderValue.textContent = slider.value;
+    });
+</script>
 </body>
 </html>
