adición de solicitud de año a la interfaz del usuario

--- a/añadir.html
+++ b/añadir.html
@@ -31,6 +31,10 @@
         <input type="text" id="director" name="director" placeholder="Nombre del director">
       </div>
       <div class="form-group">
+          <label for="year">Año:</label>
+          <input type="text" id="year" name="year" placeholder="Año de publicación">
+      </div>
+      <div class="form-group">
         <label>Género:</label>
         <label for="genre-action"><input type="radio" id="genre-action" name="genre" value="acción"> Acción</label>
         <label for="genre-comedy"><input type="radio" id="genre-comedy" name="genre" value="comedia"> Comedia</label>
