--- a/añadir.html
+++ b/añadir.html
@@ -59,7 +59,9 @@
     </div>
   </div>
 
-<script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossOrigin="anonymous">
     const searchForm = document.getElementById('search-form');
     searchForm.addEventListener('submit', function(event) {
         event.preventDefault(); // Prevenir el envío del formulario
@@ -73,12 +75,7 @@
     slider.addEventListener('input', () => {
         sliderValue.textContent = slider.value;
     });
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossOrigin="anonymous"></script>
-<script>
+    
     async function anadir_pelicula(movieNamePeli, yearPeli, generoPeli, RatingPeli, DirectorPeli, ActorPeli) {
         const driver = neo4j.driver('bolt+s://17752ec65c19d6c14955ba70ab41a17f.neo4jsandbox.com:7687', neo4j.auth.basic('neo4j', 'thirteen-photos-snow'));
         const session = driver.session();
