--- a/añadir.html
+++ b/añadir.html
@@ -62,12 +62,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossOrigin="anonymous">
-    const searchForm = document.getElementById('search-form');
-    searchForm.addEventListener('submit', function(event) {
-        event.preventDefault(); // Prevenir el envío del formulario
-        mainQuery(); // Llamar a la función createAndrunQuery()
-    });
-
     const slider = document.getElementById('ranking');
     const sliderValue = document.getElementById('slider-value');
 
@@ -75,7 +69,6 @@
     slider.addEventListener('input', () => {
         sliderValue.textContent = slider.value;
     });
-    
     async function anadir_pelicula(movieNamePeli, yearPeli, generoPeli, RatingPeli, DirectorPeli, ActorPeli) {
         const driver = neo4j.driver('bolt+s://17752ec65c19d6c14955ba70ab41a17f.neo4jsandbox.com:7687', neo4j.auth.basic('neo4j', 'thirteen-photos-snow'));
         const session = driver.session();
@@ -84,8 +77,7 @@
             // Verificar si actor existe
             const Existing_Actor = await session.run(
                 `
-                MATCH (a:Actor {name: $ActorPeli})
-                RETURN a
+                MATCH (n:Actor {name: "$ActorPeli"}) RETURN n
                 `,
                 { ActorPeli }
             );
@@ -94,7 +86,7 @@
             if (Existing_Actor.records.length === 0) { // Si el actor no existe debe crearse
                 const CreateActor = await session.run(
                     `
-                    CREATE (a:Actor {name: $ActorPeli, born: 0 })
+                    CREATE (a:Actor {name: "$ActorPeli", born: 0 })
                     RETURN a
                     `,
                     { ActorPeli }
@@ -108,8 +100,7 @@
             // Verificar si el director existe
             const Existing_Director = await session.run(
                 `
-                MATCH (d:Director {name: $DirectorPeli})
-                RETURN d
+                MATCH (n:Director {name: "$DirectorPeli"}) RETURN n
                 `,
                 { DirectorPeli }
             );
@@ -118,7 +109,7 @@
             if (Existing_Director.records.length === 0) { // Si el director no existe debe crearse
                 const CreateDirector = await session.run(
                     `
-                    CREATE (d:Director {name: $DirectorPeli})
+                    CREATE (d:Director {name: "$DirectorPeli"})
                     RETURN d
                     `,
                     { DirectorPeli }
@@ -132,9 +123,9 @@
             // Crear el película y relaciones
             const Rmovie = await session.run(
                 `
-                CREATE (m:Movie {title: $movieName, year: $yearValue, genre: $labelText, rating: $rankingValue})
-                MATCH (d:Director {name: $DirectorPeli})-[:Directed]->(m)
-                MATCH (a:Actor {name: $ActorPeli})-[:Acted_in]->(m)
+                CREATE (m:Movie {title: "$movieName", year: $yearValue, genre: "$labelText", rating: $rankingValue})
+                MATCH (d:Director {name: "$DirectorPeli"})-[:Directed]->(m)
+                MATCH (a:Actor {name: "$ActorPeli"})-[:Acted_in]->(m)
                 RETURN m
                 `,
                 { movieNamePeli, yearPeli, generoPeli, RatingPeli, DirectorPeli, ActorPeli }
@@ -173,6 +164,7 @@
             console.error('Error al agregar la película:', error);
             // Resto del código para mostrar un mensaje de error o realizar otra acción
         }
+        location.reload();//Refrescar la página
     });
 </script>
 
