--- a/añadir.html
+++ b/añadir.html
@@ -87,6 +87,7 @@
             );
 
             console.log('Película creada en la base de datos:', result.summary.counters);
+
         } catch (error) {
             console.error('Error al crear la película en la base de datos:', error);
         } finally {
@@ -113,6 +114,7 @@
         try {
             const resultado = await anadir_pelicula(movieName,directorName,actorName,yearValue,labelText,rankingValue);
             console.log('Película agregada:', resultado);
+            location.reload();  // Refresca la página
         } catch (error) {
             console.error('Error al agregar la película:', error);
         }
